--- a/blocks/form/__buttom/form__buttom.css
+++ b/blocks/form/__buttom/form__buttom.css
@@ -1,9 +1,8 @@
 .form__buttom {
     width: 358px;
-    height: 50px;
     background-color: #000000;
     border-radius: 2px;
-    margin: 48px auto 0;
+    margin: 48px auto 37px;
 }
 
 .form__buttom:hover {
@@ -14,6 +13,6 @@
 @media screen and (max-width: 900px) {
     .form__buttom {
         width: 238px;
-        height: 46px;
+        margin: 45px auto 25px;
     }
 }
