--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,4 @@
+@import url(./../styles/normalize.css);
 @import url('./../fonts/Inter Web/inter.css');
 @import url(./../blocks/page/page.css);
 @import url(./../blocks/header/header.css);
