--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,8 +1,6 @@
 .form__input {
     max-width: 358px;
-    margin: 30px 22px
-    
-    36px;
+    margin: 30px 36px 30px 36px;
     border-top-style: initial;
     border-right-style: initial;
     border-left-style: initial;
