--- a/blocks/boxForForm/boxForForm.css
+++ b/blocks/boxForForm/boxForForm.css
@@ -2,6 +2,7 @@
     width: 430px;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 @media screen and (max-width: 900px) {
