--- a/blocks/buttom/__title/buttom__title.css
+++ b/blocks/buttom/__title/buttom__title.css
@@ -1,4 +1,4 @@
-.form__buttom-title {
+.buttom__title {
     font-family: 'Inter, Arial, sans-serif';
     font-style: normal;
     font-weight: 400;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 900px) {
-    .form__buttom-title {
+    .buttom__title {
         margin: 0;
         padding: 14px 0 14px 0;
     }
