--- a/pages/index.css
+++ b/pages/index.css
@@ -21,8 +21,8 @@
 @import url(./../blocks/form/form.css);
 @import url(./../blocks/form/__title/form__title.css);
 @import url(./../blocks/form/__popup/form__popup.css);
-@import url(./../blocks/form/__buttom/form__buttom.css);
-@import url(./../blocks/form/__buttom-title/form__buttom-title.css);
+@import url(./../blocks/buttom/buttom.css);
+@import url(./../blocks/buttom/__title/buttom__title.css);
 @import url(./../blocks/form/__input/form__input.css);
 @import url(./../blocks/closeIkon/closeIkon.css);
 @import url(./../blocks/boxForForm/boxForForm.css);
