--- a/blocks/profile/__Profile-Info/profile__Profile-Info.css
+++ b/blocks/profile/__Profile-Info/profile__Profile-Info.css
@@ -1,4 +1,4 @@
-.Profile-Info {
+.profile__Profile-Info {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 900px) {
-    .Profile-Info {
+    .profile__Profile-Info {
         text-align: center;
         padding: 22.25px 0 0 0;
         width: 100%;
