style: корректировка отступов попит

--- a/blocks/Elements/Elements.css
+++ b/blocks/Elements/Elements.css
@@ -1,4 +1,4 @@
-.Elements {
+.elements {
     display: grid;
     grid-template-columns: repeat(auto-fit, 282px);
     gap: 17px;
@@ -8,14 +8,14 @@
 }
 
 @media screen and (max-width: 901px) {
-    .Elements {
+    .elements {
         margin: 0 auto 0;
         max-width: 581px;
     }
 }
 
 @media screen and (max-width: 599px) {
-    .Elements {
+    .elements {
         margin: 0 auto 0;
         max-width: 282px;
     }
