--- a/blocks/Add-Button/Add-Button.css
+++ b/blocks/Add-Button/Add-Button.css
@@ -1,4 +1,4 @@
-.Add-Button {
+.add-button {
     border: 2px solid #FFFFFF;
     border-radius: 2px;
     width: 150px;
@@ -7,13 +7,13 @@
     margin-left: auto;
 }
 
-.Add-Button:hover {
+.add-button:hover {
     opacity: 0.6;
     cursor: pointer;
 }
 
 @media screen and (max-width: 901px) {
-    .Add-Button {
+    .add-button {
         margin: 36px auto 0;
         width: 282px;
     }
