--- a/blocks/Edit-Button/Edit-Button.css
+++ b/blocks/Edit-Button/Edit-Button.css
@@ -1,4 +1,4 @@
-.Edit-Button {
+.edit-button {
     width: 24px;
     height: 24px;
     border: 1px solid #FFFFFF;
@@ -6,13 +6,13 @@
     margin-left: 18px;
 }
 
-.Edit-Button:hover {
+.edit-button:hover {
     opacity: 0.6;
     cursor: pointer;
 }
 
 @media screen and (max-width: 900px) {
-    .Edit-Button {
+    .edit-button {
         width: 18px;
         height: 18px;
         position: absolute;
