--- a/blocks/Element/__Like/Element__Like.css
+++ b/blocks/Element/__Like/Element__Like.css
@@ -1,13 +1,13 @@
-.Element__Like {
+.element__Like {
     max-height: 19px;
     max-width: 22px;
 }
 
-.Element__Like:hover {
+.element__Like:hover {
     opacity: 0.5;
     cursor: pointer;
 }
 
-.Element__Like:active {
+.element__Like:active {
     background-image: url(./../../../images/activeLike.svg);
 }
