--- a/blocks/profile/__firstname/profile__firstname.css
+++ b/blocks/profile/__firstname/profile__firstname.css
@@ -1,5 +1,5 @@
 .profile__firstname {
-    font-family: 'Inter, Arial, sans-serif';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 42px;
@@ -8,6 +8,10 @@
     margin: 0;
     display: flex;
     align-items: center;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 358px;
 }
 
 @media screen and (max-width: 599px) {
