--- a/blocks/profile/__subtext/profile__subtext.css
+++ b/blocks/profile/__subtext/profile__subtext.css
@@ -1,5 +1,5 @@
 .profile__subtext {
-    font-family: 'Inter, Arial, sans-serif';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -7,6 +7,10 @@
     color: #FFFFFF;
     margin: 0;
     padding-top: 16px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 358px;
 }
 
 
@@ -22,5 +26,6 @@
         font-weight: 400;
         font-size: 14px;
         line-height: 17px;
+        padding-top: 14px;
     }
 }
