--- a/pages/index.css
+++ b/pages/index.css
@@ -8,14 +8,14 @@
 @import url(./../blocks/profile/__content/profile__content.css);
 @import url(./../blocks/profile/__firstname/profile__firstname.css);
 @import url(./../blocks/profile/__subtext/profile__subtext.css);
-@import url(./../blocks/Edit-Button/Edit-Button.css);
-@import url(./../blocks/Add-Button/Add-Button.css);
-@import url(./../blocks/Elements/Elements.css);
-@import url(./../blocks/Element/Element.css);
+@import url(./../blocks/edit-button/edit-button.css);
+@import url(./../blocks/add-button/add-button.css);
+@import url(./../blocks/elements/elements.css);
+@import url(./../blocks/element/element.css);
 @import url(./../blocks/MaskGroup/MaskGroup.css);
-@import url(./../blocks/Group/Group.css);
-@import url(./../blocks/Element/__title/Element__title.css);
-@import url(./../blocks/Element/__Like/Element__Like.css);
+@import url(./../blocks/group/group.css);
+@import url(./../blocks/element/__title/element__title.css);
+@import url(./../blocks/element/__Like/element__like.css);
 @import url(./../blocks/footer/footer.css);
 @import url(./../blocks/footer/__title/footer__title.css);
 @import url(./../blocks/form/form.css);
@@ -28,5 +28,5 @@
 @import url(./../blocks/boxForForm/boxForForm.css);
 @import url(./../blocks/popup/popup.css);
 @import url(./../blocks/popup/__open/popup__open.css);
-@import url(./../blocks/profile/__Profile-Info/profile__Profile-Info.css);
-@import url(./../blocks/Element/__Like/_active/Element__Like_active.css);
+@import url(./../blocks/profile/__profile-Info/profile__profile-Info.css);
+@import url(./../blocks/element/__Like/_active/element__like_active.css);
