style: привести к БЭМ

--- a/blocks/popup/__boxforform/popup__boxforform.css
+++ b/blocks/popup/__boxforform/popup__boxforform.css
@@ -1,4 +1,4 @@
-.boxForForm {
+.popup__boxforform {
     width: 430px;
     display: flex;
     flex-direction: column;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 900px) {
-    .boxForForm {
+    .boxforform {
         width: 282px;
     }
 }
