--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,9 +1,9 @@
-.logo {
+.header__logo {
     padding: 45px 0 40px;
 }
 
 @media screen and (max-width: 901px) {
-    .logo {
+    .header__logo {
         padding: 28px 0 31.6px 27px;
     }
 }
