--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,4 +1,4 @@
-.form {
+.popup__form {
     width: 430px;
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 900px) {
-    .form {
+    .popup__form {
         width: 282px;
     }
 }
