--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.form__title {
+.popup__title {
     font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: 900px) {
-    .form__title {
+    .popup__title {
         padding: 25px 22px 75px 22px;
         font-size: 18px;
         line-height: 22px;
