--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,4 @@
-.add-button {
+.profile__add-button {
     border: 2px solid #FFFFFF;
     border-radius: 2px;
     width: 150px;
@@ -7,13 +7,13 @@
     margin-left: auto;
 }
 
-.add-button:hover {
+.profile__add-button:hover {
     opacity: 0.6;
     cursor: pointer;
 }
 
 @media screen and (max-width: 901px) {
-    .add-button {
+    .profile__add-button {
         margin: 36px auto 0;
         width: 282px;
     }
