--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,4 @@
-.edit-button {
+.profile__edit-button {
     width: 24px;
     height: 24px;
     border: 1px solid #FFFFFF;
@@ -6,13 +6,13 @@
     margin-left: 18px;
 }
 
-.edit-button:hover {
+.profile__edit-button:hover {
     opacity: 0.6;
     cursor: pointer;
 }
 
 @media screen and (max-width: 900px) {
-    .edit-button {
+    .profile__edit-button {
         width: 18px;
         height: 18px;
         position: absolute;
