--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,3 +9,9 @@
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+@media screen and (max-width: 900px) {
+    .popup {
+        justify-items: center;
+    }
+}
