--- a/fonts/inter.css
+++ b/fonts/inter.css
@@ -7,5 +7,11 @@
 @font-face {
   font-family: 'Inter';
   font-weight: 500;
-  src: url("./Inter-Regular.woff") format("woff");
+  src: url("./Inter-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-weight: 900;
+  src: url("./Inter-Black.woff") format("woff");
 }
