--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -17,5 +17,8 @@
         height: 18px;
         position: absolute;
         right: -30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
