--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -3,7 +3,7 @@
     background-color: #000000;
     border-radius: 2px;
     margin: 48px auto 37px;
-    font-family: 'Inter, Arial, sans-serif';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -22,6 +22,7 @@
     .popup__button {
         width: 238px;
         height: 46px;
-        margin: 45px auto 25px;
+        margin: 43px auto 23px;
+        padding: 0;
     }
 }
