--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,4 +1,4 @@
-.popup__boxforform {
+.popup__content {
     width: 430px;
     display: flex;
     flex-direction: column;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 900px) {
-    .popup__boxforform {
+    .popup__content {
         width: 282px;
     }
 }
