--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,14 +1,13 @@
 .popup__input {
     margin: 30px 36px 30px 36px;
-    border-top-style: initial;
-    border-right-style: initial;
-    border-left-style: initial;
-    border-top-color: initial;
-    border-right-color: initial;
-    border-left-color: initial;
+    border: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding: 0 0 13px 0;
     font-family: 'Inter', Arial, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
