--- a/blocks/profile/__firstname/profile__firstname.css
+++ b/blocks/profile/__firstname/profile__firstname.css
@@ -5,12 +5,13 @@
     line-height: 48px;
     color: #FFFFFF;
     margin: 0;
-    display: flex;
-    align-items: center;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
     max-width: 358px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 599px) {
@@ -20,5 +21,6 @@
         line-height: 33px;
         text-align: center;
         margin: 20 auto 0;
+        max-width: 189px;
     }
 }
