--- a/blocks/profile/__subtext/profile__subtext.css
+++ b/blocks/profile/__subtext/profile__subtext.css
@@ -4,7 +4,7 @@
     font-size: 18px;
     line-height: 22px;
     color: #FFFFFF;
-    margin: 0;
+    margin: 0 0 0 28.125px;
     padding-top: 16px;
     text-overflow: ellipsis;
     overflow: hidden;
