--- a/pages/index.css
+++ b/pages/index.css
@@ -30,3 +30,4 @@
 @import url(./../blocks/profile/__profile-info/profile__profile-info.css);
 @import url(./../blocks/element/__like/_active/element__like_active.css);
 @import url(./../blocks/profile/__plus/profile__plus.css);
+@import url(./../blocks/element/__button/element__button.css);
