--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,6 +4,11 @@
     border: 1px solid #FFFFFF;
     background-color: #000000;
     margin-left: 18px;
+    background-image: url(./../../../images/Rectangle.svg);
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-size: 10px 10px;
+    background-position: center center;
 }
 
 .profile__edit-button:hover {
@@ -17,8 +22,6 @@
         height: 18px;
         position: absolute;
         right: -30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        background-size: 7.5px 7.5px;
     }
 }
