--- a/blocks/popup/__closeikon/popup__closeikon.css
+++ b/blocks/popup/__closeikon/popup__closeikon.css
@@ -11,6 +11,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
+    border: 0;
 }
 
 .popup__closeikon:hover {
