--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,5 +1,5 @@
 .popup__input {
-    margin: 30px 36px 30px 36px;
+    margin: 0 36px 0;
     border: 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding: 0 0 13px 0;
@@ -12,21 +12,15 @@
     overflow: hidden;
     white-space: nowrap;
     max-width: 358px;
-}
-
-.popup__input:nth-child(1) {
-    margin-top: 0;
+    max-height: 14px;
 }
 
 .popup__input:nth-child(2) {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 30px;
 }
 
-@media screen and (max-width: 901px) {
-    .popup__input {}
-
-    .popup__input:nth-child(2) {
-        margin-bottom: 0;
+@media screen and (max-width: 900px) {
+    .popup__input {
+        margin-left: 22px;
     }
 }
