--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -7,6 +7,7 @@
     color: #000000;
     margin: 0;
     padding: 34px 0 54px 36px;
+    max-height: 24px;
 }
 
 @media screen and (max-width: 900px) {
