--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,6 +1,7 @@
 .popup__button {
     width: 358px;
     background-color: #000000;
+    border: 0;
     border-radius: 2px;
     margin: 48px auto 37px;
     font-family: 'Inter', Arial, sans-serif;
@@ -12,6 +13,7 @@
     color: #FFFFFF;
     height: 50px;
     padding: 0;
+    
 }
 
 .popup__button:hover {
@@ -25,5 +27,7 @@
         height: 46px;
         margin: 43px auto 23px;
         padding: 0;
+        font-size: 14px;
+        line-height: 17px;
     }
 }
