--- a/blocks/profile/__firstname/profile__firstname.css
+++ b/blocks/profile/__firstname/profile__firstname.css
@@ -9,6 +9,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    max-width: 358px;
 }
 
 @media screen and (max-width: 599px) {
