--- a/pages/index.css
+++ b/pages/index.css
@@ -28,3 +28,11 @@
 @import url(./../blocks/popup/_open/popup_open.css);
 @import url(./../blocks/profile/__plus/profile__plus.css);
 @import url(./../blocks/element/__button/element__button.css);
+@import url(./../blocks/element/__button-delete/element__button-delete.css);
+@import url(./../blocks/elements/__image-show/elements__image-show.css);
+@import url(./../blocks/elements/__image-boost/elements__image-boost.css);
+@import url(./../blocks/elements/__image-boost/_activated/elements__image-boost_activated.css);
+@import url(./../blocks/elements/__image-title/elements__image-title.css);
+@import url(./../blocks/elements/__image-content/elements__image-content.css);
+@import url(./../blocks/element/__like/_activated/element__like_activeted.css);
+@import url(./../blocks/elements/__image-big/elements__image-big.css);
