--- a/blocks/elements/__image-boost/_activated/elements__image-boost_activated.css
+++ b/blocks/elements/__image-boost/_activated/elements__image-boost_activated.css
@@ -1,4 +1,4 @@
-.popup_open {
+.elements__image-boost_activated {
     visibility: visible;
     opacity: 1;
     transition: visibility 0.5s, opacity 0.5s;
