--- a/blocks/elements/__image-boost/elements__image-boost.css
+++ b/blocks/elements/__image-boost/elements__image-boost.css
@@ -1,6 +1,6 @@
-.popup {
-    position: fixed;
+.elements__image-boost {
     display: flex;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
@@ -8,13 +8,8 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
+    flex-direction: column;
     visibility: hidden;
     opacity: 0;
     transition: visibility 0.5s, opacity 0.5s linear;
-}
-
-@media screen and (max-width: 900px) {
-    .popup {
-        justify-items: center;
-    }
 }
