refactor: рефакторинг JS

--- a/blocks/popup/__image-title/popup__image-title.css
+++ b/blocks/popup/__image-title/popup__image-title.css
@@ -1,4 +1,4 @@
-.elements__image-title {
+.popup__image-title {
     font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
