--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -15,8 +15,8 @@
     max-height: 14px;
 }
 
-.popup__input:nth-child(2) {
-    margin-bottom: 30px;
+.popup__input:nth-child(4) {
+    margin-top: 30px;
 }
 
 @media screen and (max-width: 900px) {
