--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,8 @@
 @import url(./../blocks/popup/__image-scale/popup__image-scale.css);
 @import url(./../blocks/popup/__image-title/popup__image-title.css);
 @import url(./../blocks/popup/_image_scale/popup_image_scale.css);
+@import url(./../blocks/popup/__input-conainer/popup__input-conainer.css);
+@import url(./../blocks/popup/__input/_type_error/form__input_type_error.css);
+@import url(./../blocks/popup/__input/_text_error/popup__input_text_error.css);
+@import url(./../blocks/popup/__input/_show_error/popup__input_show_error.css);
+
