--- a/blocks/popup/__text-error/popup__text-error.css
+++ b/blocks/popup/__text-error/popup__text-error.css
@@ -1,8 +1,9 @@
 .popup__text-error {
     margin: 5px 36px 0;
+    height: 30px;
     border: 0;
     color: rgba(255, 0, 0, 1);
-    padding: 0 0 13px 0;
+    padding: 0 0 0 0;
     font-family: 'Inter', Arial, sans-serif;
     font-weight: 400;
     font-size: 12px;
