--- a/pages/index.css
+++ b/pages/index.css
@@ -39,4 +39,7 @@
 @import url(./../blocks/popup/__input/_type_error/form__input_type_error.css);
 @import url(./../blocks/popup/__text-error/popup__text-error.css);
 @import url(./../blocks/popup/__text-error/_show/popup__text-error_show.css);
+@import url(./../blocks/popup/__set/popup__set.css);
+@import url(./../blocks/popup/__button/_inactive/popup__button_inactive.css);
+@import url(./../blocks/popup/__input/_link_image/popup__input_link_image.css);
 
