--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -42,4 +42,8 @@
 @import url(./../blocks/popup/__set/popup__set.css);
 @import url(./../blocks/popup/__button/_inactive/popup__button_inactive.css);
 @import url(./../blocks/popup/__input/_link_image/popup__input_link_image.css);
-
+@import url(./../blocks/profile/__avatar/_redact-icon/profile__avatar-edit-button.css);
+@import url(./../blocks/profile/__container/profile__container.css);
+@import url(./../blocks/element/__like-sum/element__like-sum.css);
+@import url(./../blocks/element/__like-sum/_active/element__like-sum_active.css);
+@import url(./../blocks/popup/__card-remove/popup__card-remove.css);
