--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,12 +7,12 @@
     background-color: transparent;
     background-repeat: no-repeat;
     background-size: 10px 10px;
-    background-position: center center;
+    background-position: center center
 }
 
 .profile__edit-button:hover {
     opacity: 0.6;
-    cursor: pointer;
+    cursor: pointer
 }
 
 @media screen and (max-width: 900px) {
@@ -21,6 +21,6 @@
         height: 18px;
         position: absolute;
         right: -30px;
-        background-size: 7.5px 7.5px;
+        background-size: 7.5px 7.5px
     }
 }
