--- a/src/blocks/profile/__avatar/_redact-icon/profile__avatar-edit-button.css
+++ b/src/blocks/profile/__avatar/_redact-icon/profile__avatar-edit-button.css
@@ -20,5 +20,5 @@
 .profile__avatar-edit-button:hover {
     opacity: 1;
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.5);;
+    background-color: rgba(0, 0, 0, 0.5);
 }
